Fixed party request

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | WebApps</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/WebAppWebGL.json");
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/WebAppsExe.json");
     </script>
   </head>
   <body>
