--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Imperial Dungeon</title>
+    <title>Unity WebGL Player | WebApps</title>
+	<link rel="stylesheet" href="style.css">
+    <script src="Build/autoResise.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/WebAppWebGL.json");
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/WebAppsExe.json");
     </script>
   </head>
   <body>
-    <div id="gameContainer" style="width: 1280px; height: 700px; margin: auto"></div>
+    <div id="gameContainer"></div>
   </body>
 </html>
